--- a/manifests/litellm-configmap.yaml
+++ b/manifests/litellm-configmap.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: litellm-config
-  namespace: llm           # используй свой namespace!
+  namespace: chat-api
 data:
   config.yaml: |
     model_list:
