--- a/manifests/litellm-deployment.yaml
+++ b/manifests/litellm-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: litellm
-  namespace: llm           # или другой namespace
+  namespace: chat-api
 spec:
   replicas: 1
   selector:
