--- a/manifests/litellm-service.yaml
+++ b/manifests/litellm-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: litellm
-  namespace: llm
+  namespace: chat-api
 spec:
   selector:
     app: litellm
