--- a/manifests/chat-api-ingress.yaml
+++ b/manifests/chat-api-ingress.yaml
@@ -2,8 +2,8 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: chat-api
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+  # annotations:
+  #   nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
     - host: chat.syncjob.ru
