--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -22,9 +22,16 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Extract git tag
+        id: vars
+        run: echo "TAG=$(git describe --tags --always)" >> $GITHUB_ENV
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: ./apps/chat
           push: true
-          tags: ghcr.io/justgithubaccount/chat-api:latest
+          tags: |
+            ghcr.io/justgithubaccount/chat-api:latest
+            ghcr.io/justgithubaccount/chat-api:${{ github.sha }}
+            ghcr.io/justgithubaccount/chat-api:${{ env.TAG }}
