--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -1,5 +1,3 @@
-name: Build and Push Docker Image
-
 on:
   push:
     branches: [ main ]
@@ -22,16 +20,9 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract git tag
-        id: vars
-        run: echo "TAG=$(git describe --tags --always)" >> $GITHUB_ENV
-
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: ./apps/chat
           push: true
-          tags: |
-            ghcr.io/justgithubaccount/chat-api:latest
-            ghcr.io/justgithubaccount/chat-api:${{ github.sha }}
-            ghcr.io/justgithubaccount/chat-api:${{ env.TAG }}
+          tags: ghcr.io/justgithubaccount/chat-api:latest
