--- a/manifests/litellm-configmap.yaml
+++ b/manifests/litellm-configmap.yaml
@@ -10,6 +10,6 @@ data:
         litellm_params:
           model: openai/gpt-4.1
           api_base: https://openrouter.ai/api/v1
-          api_key_env_var: OPENAI_API_KEY
+          api_key: os.environ/OPENAI_API_KEY
     litellm_settings:
       set_verbose: true
