--- a/manifests/litellm-deployment.yaml
+++ b/manifests/litellm-deployment.yaml
@@ -3,6 +3,8 @@ kind: Deployment
 metadata:
   name: litellm
   namespace: chat-api
+  labels:
+    app: litellm
 spec:
   replicas: 1
   selector:
@@ -20,13 +22,16 @@ spec:
         - containerPort: 4000
         envFrom:
         - secretRef:
-            name: litellm-secrets    # секрет для токенов и ключей
+            name: litellm-secrets
+        env:
+        - name: LITELLM_CONFIG_PATH
+          value: /app/config.yaml
         volumeMounts:
         - name: config
           mountPath: /app/config.yaml
           subPath: config.yaml
-        command: ["proxy-server", "--config", "/app/config.yaml"]
+        command: ["uvicorn", "litellm.main:app", "--host", "0.0.0.0", "--port", "4000"]
       volumes:
       - name: config
         configMap:
-          name: litellm-config       # вынеси конфиг в ConfigMap, best practice
+          name: litellm-config
