--- a/manifests/chat-api-deployment.yaml
+++ b/manifests/chat-api-deployment.yaml
@@ -1,36 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: chat-api
+  name: litellm
+  namespace: chat-api
   labels:
-    app: chat-api
+    app: litellm
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
-      app: chat-api
+      app: litellm
   template:
     metadata:
       labels:
-        app: chat-api
+        app: litellm
     spec:
       containers:
-        - name: chat-api
-          image: ghcr.io/justgithubaccount/chat-api:latest
-          ports:
-            - containerPort: 8000
-          envFrom:
-            - secretRef:
-                name: chat-api-secrets
-          readinessProbe:
-            httpGet:
-              path: /health
-              port: 8000
-            initialDelaySeconds: 2
-            periodSeconds: 10
-          livenessProbe:
-            httpGet:
-              path: /health
-              port: 8000
-            initialDelaySeconds: 2
-            periodSeconds: 10
+      - name: litellm
+        image: ghcr.io/berriai/litellm:main-latest
+        ports:
+        - containerPort: 4000
+        envFrom:
+        - secretRef:
+            name: litellm-secrets
+        volumeMounts:
+        - name: config
+          mountPath: /app/config.yaml
+          subPath: config.yaml
+        args: ["--config", "/app/config.yaml"]
+      volumes:
+      - name: config
+        configMap:
+          name: litellm-config
