--- a/manifests/chat-api-deployment.yaml
+++ b/manifests/chat-api-deployment.yaml
@@ -1,34 +1,36 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: litellm
-  namespace: chat-api
+  name: chat-api
   labels:
-    app: litellm
+    app: chat-api
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
-      app: litellm
+      app: chat-api
   template:
     metadata:
       labels:
-        app: litellm
+        app: chat-api
     spec:
       containers:
-      - name: litellm
-        image: ghcr.io/berriai/litellm:main-latest
-        ports:
-        - containerPort: 4000
-        envFrom:
-        - secretRef:
-            name: litellm-secrets
-        volumeMounts:
-        - name: config
-          mountPath: /app/config.yaml
-          subPath: config.yaml
-        args: ["--config", "/app/config.yaml"]
-      volumes:
-      - name: config
-        configMap:
-          name: litellm-config
+        - name: chat-api
+          image: ghcr.io/justgithubaccount/chat-api:latest
+          ports:
+            - containerPort: 8000
+          envFrom:
+            - secretRef:
+                name: chat-api-secrets
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: 8000
+            initialDelaySeconds: 2
+            periodSeconds: 10
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 8000
+            initialDelaySeconds: 2
+            periodSeconds: 10
