--- a/manifests/litellm-configmap.yaml
+++ b/manifests/litellm-configmap.yaml
@@ -8,8 +8,9 @@ data:
     model_list:
       - model_name: gpt-4.1
         litellm_params:
-          model: openai/gpt-4.1
+          model: gpt-4.1
           api_base: https://openrouter.ai/api/v1
           api_key: os.environ/OPENAI_API_KEY
+          api_key_header_name: Authorization
     litellm_settings:
       set_verbose: true
