--- a/manifests/litellm-configmap.yaml
+++ b/manifests/litellm-configmap.yaml
@@ -8,7 +8,7 @@ data:
     model_list:
       - model_name: gpt-4.1
         litellm_params:
-          model: openai/gpt-4.1
+          model: openrouter/openai/gpt-4.1
           api_base: https://openrouter.ai/api/v1
     litellm_settings:
       set_verbose: true
