--- a/manifests/litellm-configmap.yaml
+++ b/manifests/litellm-configmap.yaml
@@ -12,5 +12,6 @@ data:
           api_base: https://openrouter.ai/api/v1
           api_key: os.environ/OPENROUTER_API_KEY
           api_key_header_name: Authorization
+          api_key_prefix: "Bearer"
     litellm_settings:
       set_verbose: true
