--- a/manifests/chat-api-application.yaml
+++ b/manifests/chat-api-application.yaml
@@ -3,6 +3,12 @@ kind: Application
 metadata:
   name: chat-api
   namespace: argocd
+  labels:
+    app.kubernetes.io/name: chat-api
+    app.kubernetes.io/part-of: chat-platform  
+    app.kubernetes.io/component: backend
+    app.kubernetes.io/instance: chat-api
+    app.kubernetes.io/managed-by: argocd
 spec:
   project: default
   source:
