--- a/manifests/chat-api-vector-configmap.yaml
+++ b/manifests/chat-api-vector-configmap.yaml
@@ -1,26 +1,25 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: vector-config
+  name: chat-api-vector-config
   namespace: chat-api
 data:
   vector.toml: |
-    [sources.app_logs]
+    [sources.file_logs]
     type = "file"
     include = ["/var/log/chat/*.log"]
 
     [transforms.parse]
     type = "remap"
-    inputs = ["app_logs"]
+    inputs = ["file_logs"]
     source = '''
     . = parse_json!(.message)
     '''
 
     [sinks.loki]
     type = "loki"
-    inputs = ["merge"]
+    inputs = ["parse"]
     endpoint = "http://loki.observability.svc.cluster.local:3100"
     encoding.codec = "json"
     labels.app = "chat-api"
     labels.env = "public"
-
