--- a/manifests/litellm-deployment.yaml
+++ b/manifests/litellm-deployment.yaml
@@ -41,13 +41,13 @@ spec:
           command: ["/bin/sh", "-c"]
           args:
             - "litellm --config /app/config.yaml > /var/log/litellm/app.log 2>&1"
-          resources:
-            requests:
-              cpu: 100m
-              memory: 128Mi
-            limits:
-              cpu: 300m
-              memory: 256Mi
+          # resources:
+          #   requests:
+          #     cpu: 100m
+          #     memory: 128Mi
+          #   limits:
+          #     cpu: 300m
+          #     memory: 256Mi
 
         - name: vector
           image: timberio/vector:0.47.X-debian
@@ -61,10 +61,10 @@ spec:
               mountPath: /var/log/litellm
             - name: vector-config
               mountPath: /etc/vector
-          resources:
-            requests:
-              cpu: 50m
-              memory: 64Mi
-            limits:
-              cpu: 150m
-              memory: 128Mi
+          # resources:
+          #   requests:
+          #     cpu: 50m
+          #     memory: 64Mi
+          #   limits:
+          #     cpu: 150m
+          #     memory: 128Mi
