--- a/manifests/loki-application.yml
+++ b/manifests/loki-application.yml
@@ -20,20 +20,16 @@ spec:
 
           commonConfig:
             replication_factor: 1
+            storage:
+              backend: s3
+              s3:
+                endpoint: s3.twcstorage.ru
+                region: ru-1
+                access_key_id: ${S3_ACCESS_KEY}
+                secret_access_key: ${S3_SECRET_KEY}
+                insecure: true
 
-          storage_config:
-            aws:
-              s3: http://s3.twcstorage.ru
-              bucketnames:
-                chunks: ceae9495-3a627f83-8eba-441e-b648-37d41cded627
-                ruler: ceae9495-3a627f83-8eba-441e-b648-37d41cded627
-                admin: ceae9495-3a627f83-8eba-441e-b648-37d41cded627
-              access_key_id: ${S3_ACCESS_KEY}
-              secret_access_key: ${S3_SECRET_KEY}
-              region: ru-1
-              insecure: true
-
-          schema_config:
+          schemaConfig:
             configs:
               - from: "2024-04-01"
                 store: tsdb
@@ -42,6 +38,12 @@ spec:
                 index:
                   prefix: loki_index_
                   period: 24h
+
+          storage:
+            bucketNames:
+              chunks: ceae9495-3a627f83-8eba-441e-b648-37d41cded627
+              ruler: ceae9495-3a627f83-8eba-441e-b648-37d41cded627
+              admin: ceae9495-3a627f83-8eba-441e-b648-37d41cded627
 
           limits_config:
             allow_structured_metadata: true
@@ -79,9 +81,11 @@ spec:
                 key: secret_key
 
   destination:
-    namespace: observability
     server: https://kubernetes.default.svc
+    namespace: observability
   syncPolicy:
     automated:
       selfHeal: true
       prune: true
+    syncOptions:
+      - CreateNamespace=true
