--- a/manifests/loki-application.yml
+++ b/manifests/loki-application.yml
@@ -11,23 +11,60 @@ spec:
     targetRevision: 6.30.1
     helm:
       values: |
+        deploymentMode: SingleBinary
+
+        singleBinary:
+          replicas: 1
+
+        # Отключаем неиспользуемые роли
+        backend: { replicas: 0 }
+        read: { replicas: 0 }
+        write: { replicas: 0 }
+        ingester: { replicas: 0 }
+        querier: { replicas: 0 }
+        queryFrontend: { replicas: 0 }
+        queryScheduler: { replicas: 0 }
+        distributor: { replicas: 0 }
+        compactor: { replicas: 0 }
+        indexGateway: { replicas: 0 }
+        bloomCompactor: { replicas: 0 }
+        bloomGateway: { replicas: 0 }
+
+        gateway:
+          enabled: false
+        lokiCanary:
+          enabled: false
         grafana-agent-operator:
           enabled: false
 
         loki:
           auth_enabled: false
-          mode: monolithic
 
           commonConfig:
             replication_factor: 1
-            storage:
-              backend: s3
-              s3:
-                endpoint: s3.twcstorage.ru
-                region: ru-1
-                access_key_id: ${S3_ACCESS_KEY}
-                secret_access_key: ${S3_SECRET_KEY}
-                insecure: true
+
+          pattern_ingester:
+            enabled: true
+
+          limits_config:
+            allow_structured_metadata: true
+            volume_enabled: true
+
+          ruler:
+            enable_api: true
+
+          storage:
+            type: s3
+            bucketNames:
+              chunks: ceae9495-3a627f83-8eba-441e-b648-37d41cded627
+              ruler: ceae9495-3a627f83-8eba-441e-b648-37d41cded627
+              admin: ceae9495-3a627f83-8eba-441e-b648-37d41cded627
+            s3:
+              endpoint: s3.your-domain.com
+              access_key_id: ${S3_ACCESS_KEY}
+              secret_access_key: ${S3_SECRET_KEY}
+              region: ru-1
+              insecure: true
 
           schemaConfig:
             configs:
@@ -38,31 +75,6 @@ spec:
                 index:
                   prefix: loki_index_
                   period: 24h
-
-          storage:
-            bucketNames:
-              chunks: ceae9495-3a627f83-8eba-441e-b648-37d41cded627
-              ruler: ceae9495-3a627f83-8eba-441e-b648-37d41cded627
-              admin: ceae9495-3a627f83-8eba-441e-b648-37d41cded627
-
-          limits_config:
-            allow_structured_metadata: true
-            volume_enabled: true
-
-          pattern_ingester:
-            enabled: true
-
-          ruler:
-            enable_api: true
-
-        gateway:
-          enabled: false
-
-        lokiCanary:
-          enabled: false
-
-        singleBinary:
-          replicas: 1
 
         persistence:
           enabled: true
@@ -81,11 +93,10 @@ spec:
                 key: secret_key
 
   destination:
-    server: https://kubernetes.default.svc
     namespace: observability
+    server: https://kubernetes.default.svc
+
   syncPolicy:
     automated:
       selfHeal: true
       prune: true
-    syncOptions:
-      - CreateNamespace=true
