--- a/manifests/loki-application.yml
+++ b/manifests/loki-application.yml
@@ -38,7 +38,8 @@ spec:
           enabled: true
         grafana-agent-operator:
           enabled: false
-
+        persistence:
+          enabled: false
         loki:
           auth_enabled: false
 
