--- a/manifests/loki-application.yml
+++ b/manifests/loki-application.yml
@@ -15,8 +15,12 @@ spec:
 
         singleBinary:
           replicas: 1
+          persistence:
+            enabled: true
+            existingClaim: storage
+            storageClass: ""
+            size: 10Gi
 
-        # Отключаем неиспользуемые роли
         backend: { replicas: 0 }
         read: { replicas: 0 }
         write: { replicas: 0 }
@@ -38,31 +42,22 @@ spec:
           enabled: true
         grafana-agent-operator:
           enabled: false
-        persistence:
-          enabled: true
-          existingClaim: loki-pvc
-          storageClass: ""  # важно оставить пустым
-          size: 10Gi        # объём должен совпадать с PVC
         resultsCache:
           enabled: false
         chunksCache:
           enabled: false
+
         loki:
           auth_enabled: false
-
           commonConfig:
             replication_factor: 1
-
           pattern_ingester:
             enabled: true
-
           limits_config:
             allow_structured_metadata: true
             volume_enabled: true
-
           ruler:
             enable_api: true
-
           storage:
             type: s3
             bucketNames:
@@ -75,7 +70,6 @@ spec:
               secret_access_key: ${S3_SECRET_KEY}
               region: ru-1
               insecure: true
-
           schemaConfig:
             configs:
               - from: "2024-04-01"
