--- a/manifests/loki-pvc.yaml
+++ b/manifests/loki-pvc.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: loki-pvc
+  name: storage
   namespace: observability
 spec:
-  volumeName: loki-pv  # важная явная привязка
+  volumeName: loki-pv
   accessModes:
     - ReadWriteOnce
   resources:
