--- a/apps/chat/requirements.txt
+++ b/apps/chat/requirements.txt
@@ -4,4 +4,7 @@ uvicorn
 pydantic
 python-dotenv
 pydantic-settings
-loguru
+python-json-logger
+opentelemetry-api
+opentelemetry-sdk
+opentelemetry-instrumentation-fastapi
