--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
   "pydantic",
   "python-dotenv",
   "pydantic-settings",
-  "python-json-logger",
+  "structlog",
   "opentelemetry-api",
   "opentelemetry-sdk",
   "opentelemetry-instrumentation-fastapi"
