--- a/manifests/longhorn-application.yaml
+++ b/manifests/longhorn-application.yaml
@@ -4,18 +4,18 @@ metadata:
   name: longhorn
   namespace: argocd
 spec:
-  source:
-    repoURL: https://charts.longhorn.io
-    chart: longhorn
-    targetRevision: 1.9.0
-    helm:
-      values: |
-        preUpgradeChecker:
-          enabled: false
-  destination:
-    namespace: longhorn-system
-    server: https://kubernetes.default.svc
   syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
+  project: default
+  sources:
+    - chart: longhorn
+      repoURL: https://charts.longhorn.io/
+      targetRevision: v1.9.0
+      helm:
+        values: |
+          preUpgradeChecker:
+            jobEnabled: false
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: longhorn-system
