--- a/manifests/chat-api-deployment.yaml
+++ b/manifests/chat-api-deployment.yaml
@@ -47,6 +47,8 @@ spec:
           envFrom:
             - secretRef:
                 name: chat-api-secrets
+            - secretRef:
+                name: chat-api-db
           readinessProbe:
             httpGet:
               path: /health
