--- a/manifests/nginx-application.yaml
+++ b/manifests/nginx-application.yaml
@@ -23,6 +23,8 @@ spec:
     server: https://kubernetes.default.svc
     namespace: ingress-nginx
   syncPolicy:
+    syncOptions:
+      - CreateNamespace=true
     automated:
       selfHeal: true
       prune: true
