--- a/manifests/chat-api-ingress.yaml
+++ b/manifests/chat-api-ingress.yaml
@@ -2,10 +2,16 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: chat-api
-  # annotations:
+  annotations:
   #   nginx.ingress.kubernetes.io/rewrite-target: /
+    cert-manager.io/cluster-issuer: letsencrypt-prod
+    ingress.kubernetes.io/ssl-redirect: "true"
 spec:
   ingressClassName: nginx
+  tls:
+    - hosts:
+        - chat.syncjob.ru
+      secretName: chat-api-tls
   rules:
     - host: chat.syncjob.ru
       http:
