--- a/manifests/ingress-chat-api.yaml
+++ b/manifests/ingress-chat-api.yaml
@@ -4,14 +4,14 @@ metadata:
   name: chat-api
   annotations:
   #   nginx.ingress.kubernetes.io/rewrite-target: /
-    cert-manager.io/cluster-issuer: letsencrypt-prod
+    cert-manager.io/cluster-issuer: letsencrypt-dns
     ingress.kubernetes.io/ssl-redirect: "true"
 spec:
   ingressClassName: nginx
   tls:
     - hosts:
         - chat.syncjob.ru
-      secretName: chat-api-tls
+      secretName: wildcard-syncjob-tls
   rules:
     - host: chat.syncjob.ru
       http:
