--- a/manifests/app-cert-manager.yaml
+++ b/manifests/app-cert-manager.yaml
@@ -12,6 +12,9 @@ spec:
     helm:
       values: |
         installCRDs: true
+        extraArgs:
+          - --dns01-recursive-nameservers-only
+          - --dns01-recursive-nameservers=8.8.8.8:53,1.1.1.1:53
   destination:
     server: https://kubernetes.default.svc
     namespace: cert-manager
