--- a/charts/chat/templates/configmap-vector.yaml
+++ b/charts/chat/templates/configmap-vector.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: chat-api-vector-config
-  namespace: chat-api
+  name: {{ include "chat-api.fullname" . }}-vector-config
+  namespace: {{ .Values.namespace | default "chat-api" }}
 data:
   vector.toml: |
     [sources.otel]
@@ -17,7 +17,7 @@ data:
     [sinks.loki]
     type = "loki"
     inputs = ["otel.logs"]
-    endpoint = "http://loki.observability.svc.cluster.local:3100"
+    endpoint = "{{ .Values.vector.lokiEndpoint }}"
     encoding.codec = "json"
-    labels.app = "chat-api"
-    labels.env = "public"
+    labels.app = "{{ include "chat-api.name" . }}"
+    labels.env = "{{ .Values.vector.env }}"
