--- a/manifests/core/namespaces/nginx-namespace.yaml
+++ b/manifests/core/namespaces/nginx-namespace.yaml
@@ -1,4 +1,4 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: ingress-nginx
+# apiVersion: v1
+# kind: Namespace
+# metadata:
+#   name: ingress-nginx
