--- a/infra/clusters/prd/kustomization.yaml
+++ b/infra/clusters/prd/kustomization.yaml
@@ -7,8 +7,20 @@ resources:
   - ../../../base/addons/ingress-nginx
   - ../../../base/addons/cert-manager
   - ../../../base/addons/external-dns
+  - ../../../base/addons/observability/loki
+  - ../../../base/addons/observability/grafana
+  - ../../../base/addons/longhorn
+  - ../../../base/services/agent/chat
+  - ../../../base/services/llm/gateway
 
 patches:
-  - path: destination.yaml
-    target:
+  # Исправляем CLUSTER placeholder для всех Applications
+  - target:
       kind: Application
+    patch: |-
+      - op: replace
+        path: /spec/destination/name
+        value: prd
+      - op: replace  
+        path: /spec/destination/server
+        value: https://kubernetes.default.svc
