--- a/infra/base/addons/ingress-nginx/overlays/ingress-argo.yaml
+++ b/infra/base/addons/ingress-nginx/overlays/ingress-argo.yaml
@@ -4,9 +4,11 @@ metadata:
   name: argocd-server
   namespace: argocd
   annotations:
+    argocd.argoproj.io/sync-wave: "3"
     cert-manager.io/cluster-issuer: letsencrypt-dns
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
 spec:
   ingressClassName: nginx
   tls:
