--- a/infra/base/addons/ingress-nginx/overlays/ingress-chat.yaml
+++ b/infra/base/addons/ingress-nginx/overlays/ingress-chat.yaml
@@ -2,10 +2,12 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: chat-api
+  namespace: chat-api
   annotations:
-  #   nginx.ingress.kubernetes.io/rewrite-target: /
+    argocd.argoproj.io/sync-wave: "3"  # После ingress-nginx
     cert-manager.io/cluster-issuer: letsencrypt-dns
     ingress.kubernetes.io/ssl-redirect: "true"
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
 spec:
   ingressClassName: nginx
   tls:
