--- a/infra/base/services/agent/chat/app.yaml
+++ b/infra/base/services/agent/chat/app.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: chat-api
   namespace: argocd
+  annotations:
+    argocd.argoproj.io/sync-wave: "4"
 spec:
   project: default
   source:
@@ -14,7 +16,8 @@ spec:
         image:
           tag: latest
   destination:
-    server: CLUSTER
+    # server: CLUSTER
+    server: https://kubernetes.default.svc
     namespace: chat-api
   syncPolicy:
     automated:
