--- a/infra/clusters/dev/kustomization.yaml
+++ b/infra/clusters/dev/kustomization.yaml
@@ -12,14 +12,24 @@ resources:
   - ../../../base/services/agent/chat
   - ../../../base/services/llm/gateway
 
+# patches:
+#   # Исправляем CLUSTER placeholder для всех Applications
+#   - target:
+#       kind: Application
+#     patch: |-
+#       - op: replace
+#         path: /spec/destination/name
+#         value: dev
+#       - op: replace
+#         path: /spec/destination/server  
+#         value: https://kubernetes.default.svc
+
 patches:
-  # Исправляем CLUSTER placeholder для всех Applications
   - target:
       kind: Application
     patch: |-
-      - op: replace
+      - op: remove
         path: /spec/destination/name
-        value: dev
       - op: replace
-        path: /spec/destination/server  
+        path: /spec/destination/server
         value: https://kubernetes.default.svc
