--- a/infra/clusters/dev/destination.yaml
+++ b/infra/clusters/dev/destination.yaml
@@ -1,8 +1,10 @@
+# infra/clusters/dev/destination.yaml
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: all                    # имя здесь неважно – патч применится по kind
+  name: all
+  namespace: argocd
 spec:
+  project: default
   destination:
-    name: dev                  # ТОЧНОЕ имя prod-кластера из `argocd cluster list`
-    namespace: argocd          # можно опустить, если в base уже указано
+    server: https://kubernetes.default.svc
