--- a/infra/clusters/dev/kustomization.yaml
+++ b/infra/clusters/dev/kustomization.yaml
@@ -1,8 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-
 namePrefix: dev-
-
 resources:
   - ../../base/addons/ingress-nginx
   - ../../base/addons/cert-manager
@@ -12,24 +10,7 @@ resources:
   - ../../base/services/agent/chat
   - ../../base/services/llm/gateway
 
-# patches:
-#   # Исправляем CLUSTER placeholder для всех Applications
-#   - target:
-#       kind: Application
-#     patch: |-
-#       - op: replace
-#         path: /spec/destination/name
-#         value: dev
-#       - op: replace
-#         path: /spec/destination/server  
-#         value: https://kubernetes.default.svc
-
 patches:
-  - target:
+  - path: destination.yaml
+    target:
       kind: Application
-    patch: |-
-      - op: remove
-        path: /spec/destination/name
-      - op: replace
-        path: /spec/destination/server
-        value: https://kubernetes.default.svc
