--- a/infra/clusters/dev/kustomization.yaml
+++ b/infra/clusters/dev/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 # namePrefix: dev-
 resources:
+  - ../../base/addons/sealed-secrets
   - ../../base/addons/ingress-nginx
   - ../../base/addons/cert-manager
   - ../../base/addons/external-dns
