--- a/infra/base/addons/longhorn/application.yaml
+++ b/infra/base/addons/longhorn/application.yaml
@@ -17,5 +17,5 @@ spec:
           preUpgradeChecker:
             jobEnabled: false
   destination:
-    server: https://kubernetes.default.svc
+    name: CLUSTER
     namespace: longhorn-system
