--- a/infra/base/addons/observability/loki/application.yaml
+++ b/infra/base/addons/observability/loki/application.yaml
@@ -95,7 +95,7 @@ spec:
 
   destination:
     namespace: observability
-    server: https://kubernetes.default.svc
+    name: CLUSTER
 
   syncPolicy:
     automated:
