--- a/infra/base/addons/longhorn/application.yaml
+++ b/infra/base/addons/longhorn/application.yaml
@@ -4,9 +4,6 @@ metadata:
   name: longhorn
   namespace: argocd
 spec:
-  syncPolicy:
-    syncOptions:
-      - CreateNamespace=true
   project: default
   sources:
     - chart: longhorn
@@ -19,3 +16,9 @@ spec:
   destination:
     name: CLUSTER
     namespace: longhorn-system
+  syncPolicy:
+    automated:
+      selfHeal: true
+      prune: true
+    syncOptions:
+      - CreateNamespace=true
