--- a/infra/base/addons/cert-manager/cert-cluster.yaml
+++ b/infra/base/addons/cert-manager/cert-cluster.yaml
@@ -3,6 +3,8 @@ kind: Certificate
 metadata:
   name: wildcard-syncjob
   namespace: chat-api
+  annotations:
+    argocd.argoproj.io/sync-wave: "3" 
 spec:
   secretName: wildcard-syncjob-tls
   dnsNames:
