--- a/infra/base/addons/ingress-nginx/overlays/ingress-argo.yaml
+++ b/infra/base/addons/ingress-nginx/overlays/ingress-argo.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: argocd
   annotations:
     argocd.argoproj.io/sync-wave: "3"
-    cert-manager.io/cluster-issuer: letsencrypt-dns
+    # cert-manager.io/cluster-issuer: letsencrypt-dns
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
